--- a/index.html
+++ b/index.html
@@ -278,26 +278,33 @@
       <section class="info-section">
         <h3 class="info-section__heading">Projects</h3>
         <section class="info-section__group">
-          <h4 class="info-section__sub-heading">Petzy<br><span class="info-section__remark">(Backend: APIs through Node.js and MySql.
-              
+          <h4 class="info-section__sub-heading">Petzy<br><span class="info-section__remark">(Backend: APIs through
+              Node.js and MySql.
+
               Client: Flutter. )</span></h4>
-          <p class="info-section__text"><a href="youtubeLink">Petzy</a>. is an application that allows pet-boarder and
-            dog-walker to offer their services to pet-owner and take care about them pets, also allow pet-owner to
-            search the nearest veterinairis and they can by product from our pet-store.<a href=""
+          <p class="info-section__text"><a href="youtubeLink">Petzy</a>. is a versatile application that brings
+            together pet owners and care providers in a seamless and convenient manner. By connecting pet-boarders and
+            dog-walkers with pet-owners, Petzy offers a convenient platform for exceptional pet care services.
+            Furthermore, it empowers pet-owners to effortlessly locate and access nearby veterinarians while providing a
+            seamless shopping experience through our premium pet-store.<a href="" target="_blank">gitLink</a></p>
+        </section>
+        <section class="info-section__group">
+          <h4 class="info-section__sub-heading">Yummy<br><span class="info-section__remark">( Frontend: Angular)</span>
+          </h4>
+          <p class="info-section__text"><a href="youtubeLink">Yummy</a> is a sophisticated restaurant application
+            that seamlessly enhances the dining experience. With Yummy, customers can easily access enticing menus,
+            effortlessly place orders, and enjoy the convenience of doorstep delivery. <a href=""
               target="_blank">gitLink</a></p>
         </section>
         <section class="info-section__group">
-          <h4 class="info-section__sub-heading">Yummy<br><span class="info-section__remark">( Frontend: Angular)</span></h4>
-          <p class="info-section__text"><a href="youtubeLink">Yummy</a> is an application allow users to place an order
-            from our menu and delever the order.<a href="" target="_blank">gitLink</a></p>
-        </section>
-        <section class="info-section__group">
-          <h4 class="info-section__sub-heading">Travel Agency<br><span class="info-section__remark">(Backend: APIs through Node.js and MongoDB.
-              
-            Client: React.)</span></h4>
-          <p class="info-section__text"><a href="youtubeLink">Travel agency</a> is an application that allow users to
-            search and booking a destination, also users can rate and give thier feedbacks.<a href=""
-              target="_blank">gitLink</a></p>
+          <h4 class="info-section__sub-heading">TravelX<br><span class="info-section__remark">(Backend: APIs
+              through Node.js and MongoDB.
+
+              Client: React.)</span></h4>
+          <p class="info-section__text"><a href="youtubeLink">TravelX</a>  is an advanced travel agency
+            application that empowers users to effortlessly search, book, and embark on unforgettable destinations. With
+            TravelX, users gain access to our curated selection of special tours led by expert guides, ensuring a
+            personalized and enriching travel experience.<a href="" target="_blank">gitLink</a></p>
         </section>
       </section>
     </div>
