--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <h3 class="info-section__heading">Links</h3>
         <a href="https://github.com/AymenBougeh" target="_blank" class="info-section__link">GitHub</a>
         <a href="https://www.linkedin.com/in/aymen-bougeh/" target="_blank" class="info-section__link">LinkedIn</a>
-        <a href="./public/Aymen%20Bougeh,%20JavaScript%20Software%20engineer.pdf.pdf"
+        <a href="./public/Aymen%20Bougeh.pdf"
           download="Aymen Bougeh, JavaScript Software engineer" target="_blank"
           class="info-section__link hide-on-print">Download CV<img src="img/file-download.svg"
             class="info-section__icon" alt="click to download CV"></a>
