--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <header class="title dot-spacing">
       <div class="title__credentials">
         <h1 class="title__name">Aymen<br>Bougeh</h1>
-        <h2 class="title__position">Junior JavaScript Software engineer</h2>
+        <h2 class="title__position">Junior JavaScript Software Developer</h2>
       </div>
       <img class="title__image" src="img/cvimg.jpg" alt="Aymen Bougeh, JavaScript Software engineer, picture">
     </header>
